# CH582_SdCard_Wave_Play

./: CMakeLists.txt  README.md
Startup/: startup_CH583.S
StdPeriphDriver/: CH58x_clk.c  CH58x_i2c.c
src/: Main.c  diskio.c  diskio.h
